<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">TLSApp</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Tiempo de Inferencia</string>
    <string name="label_fps">Tramas por Segundo</string>
    <string name="label_confidence_threshold">Umbral</string>
    <string name="label_max_results">Max Resultados</string>
    <string name="label_threads">Número de Hilos</string>
    <string name="label_delegate">Delegados</string>
    <string name="label_models">Modelo</string>
    <string name="borrar">Borrar</string>
    <string name="toolbar">toolbar</string>
    <string name="erase_text">Erase one</string>
    <string name="delete_all_text">Delete all</string>
    <string name="logo_content_descriptor">Logo</string>
    <string name="note_content_descriptor">Nota Aviso</string>
    <string name="text_slogan">Traductor de la Lengua de Señas Argentina</string>
    <string name="info_advert">Por favor, mostrar el siguiente aviso a quien va a realizar las señas!</string>
    <string name="button_text">Comenzar a traducir</string>

    <string name="words">Palabras capturadas: %s</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <!--
        <item>GPU</item>
        <item>NNAPI</item>
        -->
    </string-array>

    <string-array name="models_spinner_titles">
        <item>LSA Model</item>
        <!--
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
        <item>MobileNet V1</item>
        -->
    </string-array>

</resources>
